testing ShareLaTeX integration

--- a/thesis.tex
+++ b/thesis.tex
@@ -14,7 +14,7 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\title{Combining indoor positioning with stereoscopic VR \& video passthrough for simultaneous exploration of tandem real \& VR environments}
+\title{Combining indoor positioning with stereoscopic VR \& video passthrough for simultaneous exploration of tandem real \& VR environments foo}
 \date{March 2015}
 \author{CJ Davies}
 \maketitle
