title page, declarations, etc.

--- a/thesis.tex
+++ b/thesis.tex
@@ -14,10 +14,49 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\title{Combining indoor positioning with stereoscopic VR \& video passthrough for simultaneous exploration of tandem real \& VR environments}
+% cover page
+
+\thispagestyle{empty}
+
+\begin{center}
+	\textbf{\Huge{Parallel Reality: Tandem Exploration of Real \& Virtual Environments}}
+\end{center}
+
+\vspace{20mm}
+
+\begin{center}
+	\textbf{\Huge{CJ Davies}}
+\end{center}
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=.6\textwidth]{crest.png}
+	\end{center}
+\end{figure}
+
+\begin{center}
+	\Large{This thesis is submitted in partial fulfilment for the degree of PhD
+	
+	at the University of St Andrews}
+\end{center}
+
+\vspace{10mm}
+
+\begin{center}
+	\Large{March 2015}
+\end{center}
+
+% ======= ======= ======= ======= ======= ======= =======
+
+%\title{Combining indoor positioning with stereoscopic VR \& video passthrough for simultaneous exploration of tandem real \& VR environments}
+\title{Parallel Reality: Tandem Exploration of Real \& Virtual Environments}
 \date{March 2015}
 \author{CJ Davies}
 \maketitle
+
+% ======= ======= ======= ======= ======= ======= =======
+
+\input{00_declaration/declaration.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
 
