removed sensor/actuator networks from literature review, removed some appendices from sub documents (for later inclusion as main document appendices)

--- a/00_declaration/declaration.tex
+++ b/00_declaration/declaration.tex
@@ -33,7 +33,7 @@ In submitting this thesis to the University of St Andrews I understand that I am
 The following is an agreed request by candidate and supervisor regarding the publication of this thesis:
 
 \begin{description}
-	\item[a.] No embargo on print copy
+	\item[a.] No embargo on print copy.
 \end{description}
 
 \vspace{5mm}
