restructuring literature review

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1,7 +1,7 @@
 %=========================================================================================================
 %=========================================================================================================
 
-\subsubsection{The Case for Mobile XR}
+\section{The Case for Mobile XR}
 This investigation compares two scenarios for interaction with a real location \& a corresponding virtual location.
 
 \begin{enumerate}
@@ -11,7 +11,7 @@ This investigation compares two scenarios for interaction with a real location \
 
 The locations in question are St Salvator's chapel \& a virtual reconstruction of the chapel as it stood in 1450-1460. The stationary scenario is representative of how virtual reality technologies, including both CAVEs \& HMDs, have previously been used for dissemination of virtual reality content in cultural heritage contexts~\cite{Roussou2002} \& thus this investigation serves to compare Mirrorshades with previous applications virtual reality content to these contexts.
 
-\subsubsection{Process}
+\section{Process}
 \begin{itemize}
 	\item Participants complete a pre-task questionnaire, which provides calibration for their subsequent responses by enquiring about age, gender identity, previous experience with VR hardware \& previous interactions with either the real or virtual chapel. This questionnaire is included as Appendix \ref{pre_task_questionnaire}.
 	
@@ -30,7 +30,7 @@ The locations in question are St Salvator's chapel \& a virtual reconstruction o
 
 In addition to SUS, the 12-item questionnaire \& the structured interview, quantitative data is logged by the Mirrorshades platform when a participant is interacting with virtual content in the first scenario \& at all times during the second scenario.
 
-\subsubsection{The Scenarios}
+\section{The Scenarios}
 Both scenarios that participants complete for this investigation are designed to mimic the style of exploration \& interaction that visitors to the chapel display, which was observed over several occasions. Visitors enter the chapel from the North/West corner then proceed to walk Eastwards along the nave, pausing to look around after passing through the rood screen, before continuing along the nave toward the altar. Visitors pause in front of the alter upon reaching the end of the pews \& then walk North toward the tomb where they pause again to inspect it. Participants are instructed to imagine that they are performing a similar visit to the chapel \& to follow a similar path, pausing after the rood screen, at the end of the pews \& in front of the tomb. Participants are shown the map included as figure \ref{chapel_path} to explain the scenario better.
 
 In the stationary scenario, participants interact with the virtual chapel using the Rift \& Xbox controller, whilst in a sitting position. After completing the path, they remove the headset \& then walk the same path in the real chapel. This scenario alludes to how virtual reality technologies have previously been applied to cultural heritage situations, allowing visitors to experience a virtual reality reconstruction or reimagination of the real environment from a fixed position \& with their view of the real environment wholly occluded by their view of the virtual environment.
@@ -47,7 +47,7 @@ In this first investigation phase, only one transition is available to participa
 	\end{center}
 \end{figure}
 
-\subsubsection{Hypotheses}
+\section{Hypotheses}
 The aim of the mobile scenario is to improve participant engagement with \& understanding of the relationships between the real \& virtual environments, by addressing the problems of spatial \& temporal separation inherent with the `traditional' stationary scenario, by imparting upon the participant the ability to transition between equivalent vantage points within the real \& virtual environments at will.
 
 While we expect participants to report that the mobile scenario does indeed allow them to better compare \& contrast the real \& virtual environments, identify differences between the real \& virtual environments \& gain a better understanding of how the real \& virtual environments relate to each other, we expect some participants to report that having to `split' their attention between the two environments in the mobile scenario leads to lessened engagement \& understanding \& that the visual quality of the real view through the headset/cameras leads to some participants preferring to interact with the real environment without the headset.
@@ -60,10 +60,10 @@ Addressing these issues, such that participants don't find viewing the real thro
 %Engagement with both environments will be increased
 %So for tasks where real time comparison \& contrast is required, this is good
 
-\subsubsection{SUS}
+\section{SUS}
 SUS scores for the mobile scenario are expected to average lower than those for the stationary scenario, due to the cumbersome nature of the platform when performing the mobile scenario; during the stationary scenario, participants are seated, whilst during the mobile scenario they are required to carry a satchel over one shoulder \& hold a smartphone in their left hand. Participants who are able to overcome this cumbersomeness are expected to respond more favourably to the mobile scenario than those who cannot overcome it.
 
-\subsubsection{12-item Questionnaire}
+\section{12-item Questionnaire}
 \begin{itemize}
 	\item Participants will find it easier to compare \& contrast real \& virtual environments in the mobile scenario than in the stationary scenario (q2)
 	\item Participants will experience a greater  sense of `being in' the virtual environment in the mobile scenario than in the stationary scenario (q4, due to physical movement/embodiment)
@@ -73,7 +73,7 @@ SUS scores for the mobile scenario are expected to average lower than those for 
 	\item Participants will gain a better understanding of what the chapel was like in the past in the mobile scenario than in the stationary scenario (q12)
 \end{itemize}
 
-\subsubsection{Log data}
+\section{Log data}
 \begin{itemize}
 	\item Head movement (pitch \& yaw) will be more restricted in the mobile scenario compared to the stationary scenario
 	\item Aversion to looking around (even at real) when moving in the mobile scenario
@@ -81,7 +81,7 @@ SUS scores for the mobile scenario are expected to average lower than those for 
 	\item Tendency to only look at virtual when looking around
 \end{itemize}
 
-\subsubsection{Interviews}
+\section{Interviews}
 \begin{itemize}
 	\item mobile scenario makes it easier to spot differences
 	\item mobile scenario reveals differences that stationary didn't
@@ -91,9 +91,9 @@ SUS scores for the mobile scenario are expected to average lower than those for 
 
 %=========================================================================================================
 
-\subsubsection{Results}
+\section{Results}
 
-\subsubsection{Pre-task Questionnaire}
+\subsection{Pre-task Questionnaire}
 
 For n=5 ages ranged from 21-26, 3x female \& 2x male, all reported previous experience using a games console controller, 1x reported previous use of a HMD, 2x reported having previously visited the chapel, none had previously interacted with the virtual chapel model.
 
@@ -112,7 +112,7 @@ For n=5 ages ranged from 21-26, 3x female \& 2x male, all reported previous expe
 
 \pagebreak
 
-\subsubsection{SUS}
+\subsection{SUS}
 
 \begin{figure}[h]
 	\begin{center}
@@ -126,7 +126,7 @@ As expected, the SUS scores for the mobile scenario are lower than those of the 
 
 \pagebreak
 
-\subsubsection{12-item Questionnaire}
+\subsection{12-item Questionnaire}
 
 \begin{figure}[h]
 	\begin{center}
@@ -146,7 +146,7 @@ The hypotheses seem to hold, in particular;
 
 It is worth highlighting the responses to q10 in relation to those to q2. Participants reported finding it easier to compare features from the past \& present (q2) during the mobile scenario, however did not report a difference between not noticing differences between the real \& virtual environments (q10).
 
-\subsubsection{Log data}
+\subsection{Log data}
 
 %Amongst the details captured by the automatic logging, the relationships revealed between movement, head orientation \& when participants transitioned between real \& virtual are the most interesting.
 
