fleshing out results sections with plots

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -270,3 +270,260 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \end{figure}
 
 %=========================================================================================================
+
+\clearpage
+
+\section{Phase 2.1 Results}
+
+\lipsum[1]
+
+\lipsum[2]
+
+\lipsum[3]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 7}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/7_1-4_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 8}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/8_1-3_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/8_1-4_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 9}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/9_1-3_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/9_1-4_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 10}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/10_1-3_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/10_1-4_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 11}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/11_1-3_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/11_1-4_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 12}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/12_1-3_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/12_1-4_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 13}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/13_1-3_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.1/13_1-4_3up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\section{Phase 2.2 Results}
+
+\lipsum[1]
+
+\lipsum[2]
+
+\lipsum[3]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 14}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/14_75_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/14_50_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 15}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/15_75_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/15_50_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 16}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/16_75_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/16_50_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
+
+\clearpage
+
+\subsection{Participant 17}
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/17_75_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/2.2/17_50_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
+
+%=========================================================================================================
