--- a/thesis.tex
+++ b/thesis.tex
@@ -3,6 +3,8 @@
 \usepackage{fullpage}
 \usepackage{graphicx}
 
+\usepackage{lipsum}
+
 %compresses ranges of citations eg [1, 2, 3, 4, 5] becomes [1-5]
 \usepackage[numbers,sort&compress]{natbib}
 
