--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1,6 +1,8 @@
 %=========================================================================================================
 %=========================================================================================================
 
+Studies are split into three parts; Phase 1, Phase 2.1 \& Phase 2.2.
+
 \section{The Case for Mobile XR}
 This investigation compares two scenarios for interaction with a real location \& a corresponding virtual location.
 
@@ -91,7 +93,7 @@ SUS scores for the mobile scenario are expected to average lower than those for 
 
 %=========================================================================================================
 
-\section{Results}
+\section{Phase 1 Results}
 
 \subsection{Pre-task Questionnaire}
 
@@ -116,7 +118,7 @@ For n=5 ages ranged from 21-26, 3x female \& 2x male, all reported previous expe
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=0.7\linewidth]{images/sus.png}
+		\includegraphics[width=0.7\linewidth]{images/1/sus.png}
 		\caption{SUS results.}
 		\label{sus}
 	\end{center}
@@ -130,7 +132,7 @@ As expected, the SUS scores for the mobile scenario are lower than those of the 
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=0.9\linewidth]{images/post_task_questionnaire_boxplot.png}
+		\includegraphics[width=0.9\linewidth]{images/1/post_task_questionnaire_boxplot.png}
 		\caption{12-item questionnaire results.}
 		\label{12-item_boxplot}
 	\end{center}
@@ -146,128 +148,115 @@ The hypotheses seem to hold, in particular;
 
 It is worth highlighting the responses to q10 in relation to those to q2. Participants reported finding it easier to compare features from the past \& present (q2) during the mobile scenario, however did not report a difference between not noticing differences between the real \& virtual environments (q10).
 
-\subsection{Log data}
+%=========================================================================================================
 
-%Amongst the details captured by the automatic logging, the relationships revealed between movement, head orientation \& when participants transitioned between real \& virtual are the most interesting.
+\clearpage
 
+\subsection{Participant 1}
 
-%comparing the plots for
-%	distance moved against time for stationary scenario
-%	\&
-%	pitch \& yaw against time for stationary scenario
-	
-%against
-%	distance moved against time for mobile scenario
-%	\&
-%	pitch \& yaw against time for mobile scenario
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/1_4up.png}}
+	\caption{Some images, yah.}
+\end{figure}
 
-%supports the hypotheses that
-%	head movement will be more restricted in the mobile scenario compared to the stationary scenario
-		
-%	in the mobile scenario participants seem to only look around
-%		when standing still
-%		when looking at virtual
-%	the fact that participants didn't look around themselves when moving \& looking at real would seem to imply that participants did not feel comfortable enough when moving with the headset on to engage fully with their real environment \& instead had to focus all of their attention on looking straight ahead in the direction they were walking
+\lipsum[1]
 
-***stats here (see R output files)
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/1_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
 
 %=========================================================================================================
 
-%\begin{landscape}
-	\begin{figure}[h]
-		\begin{center}
-			\includegraphics[width=\linewidth]{images/24072014_1200_4up.png}
-			\caption{Participant 1}
-			\label{participant_1_4up}
-		\end{center}
-	\end{figure}
-%\end{landscape}
+\clearpage
+
+\subsection{Participant 3}
 
 \begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{images/24072014_1200_2up.png}
-		\caption{Participant 1}
-		\label{participant_1_2up}
-	\end{center}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/3_4up.png}}
+	\caption{Some images, yah.}
 \end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/3_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
 
 %=========================================================================================================
 
-%\begin{landscape}
-	\begin{figure}[h]
-		\begin{center}
-			\includegraphics[width=\linewidth]{images/25072014_1300_4up.png}
-			\caption{Participant 2}
-			\label{participant_2_4up}
-		\end{center}
-	\end{figure}
-%\end{landscape}
+\clearpage
+
+\subsection{Participant 4}
 
 \begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{images/25072014_1300_2up.png}
-		\caption{Participant 2}
-		\label{participant_2_2up}
-	\end{center}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/4_4up.png}}
+	\caption{Some images, yah.}
 \end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/4_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
 
 %=========================================================================================================
 
-%\begin{landscape}
-	\begin{figure}[h]
-		\begin{center}
-			\includegraphics[width=\linewidth]{images/25072014_1400_4up.png}
-			\caption{Participant 3}
-			\label{participant_3_4up}
-		\end{center}
-	\end{figure}
-%\end{landscape}
+\subsection{Participant 5}
+
+\clearpage
 
 \begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{images/25072014_1400_2up.png}
-		\caption{Participant 3}
-		\label{participant_3_2up}
-	\end{center}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/5_4up.png}}
+	\caption{Some images, yah.}
 \end{figure}
+
+\lipsum[1]
+
+\clearpage
+
+\begin{figure}[h]
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/5_2up.png}}
+	\caption{Some images, yah.}
+\end{figure}
+
+\lipsum[1]
 
 %=========================================================================================================
 
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{images/25072014_1500_4up.png}
-		\caption{Participant 4}
-		\label{participant_4_4up}
-	\end{center}
-\end{figure}
+\subsection{Participant 6}
+
+\clearpage
 
 \begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{images/25072014_1500_2up.png}
-		\caption{Participant 4}
-		\label{participant_4_2up}
-	\end{center}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/6_4up.png}}
+	\caption{Some images, yah.}
 \end{figure}
 
-%=========================================================================================================
+\lipsum[1]
 
-%\begin{landscape}
-	\begin{figure}[h]
-		\begin{center}
-			\includegraphics[width=\linewidth]{images/29082014_1350_4up.png}
-			\caption{Participant 5}
-			\label{participant_5_4up}
-		\end{center}
-	\end{figure}
-%\end{landscape}
+\clearpage
 
 \begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=\linewidth]{images/29082014_1350_2up.png}
-		\caption{Participant 5}
-		\label{participant_5_2up}
-	\end{center}
+	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{images/1/6_2up.png}}
+	\caption{Some images, yah.}
 \end{figure}
+
+\lipsum[1]
 
 %=========================================================================================================
 
