--- a/thesis.tex
+++ b/thesis.tex
@@ -95,6 +95,7 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 \chapter{Virtual Time Window}
+\graphicspath{ {04_vtw/} }
 \input{04_vtw/vtw.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
